--- a/10_0ther_knowledge_supplement/package.json
+++ b/10_0ther_knowledge_supplement/package.json
@@ -4,11 +4,19 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "dev":"nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "express": "^4.17.3",
+    "koa": "^2.13.4",
+    "vue": "2.6.14",
+    "vue-router": "3.2.0",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
