--- a/ly-trip/package.json
+++ b/ly-trip/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "dayjs": "^1.11.6",
     "less": "^4.1.3",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.23",
+    "underscore": "^1.13.6",
     "vant": "^3.6.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.6"
