--- a/12_exercise_composition_api/package.json
+++ b/12_exercise_composition_api/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "lodash-es": "^4.17.21",
     "marked": "^4.0.13",
     "vue": "^3.0.0"
