--- a/07_vue2_demo/package.json
+++ b/07_vue2_demo/package.json
@@ -7,9 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.13",
     "echarts": "^4.9.0",
-    "vue": "^2.6.14"
+    "lodash": "^4.17.21",
+    "scss": "^0.2.4",
+    "vant": "^2.13.6",
+    "vue": "^2.6.14",
+    "vuex": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
